--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "helmet": "^5.1.1",
     "moment": "^2.29.4",
     "serverless-http": "^3.1.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "serverless-dynamodb-local": "^0.2.40",
+    "yup": "^0.32.11",
     "@types/aws-lambda": "^8.10.108",
     "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.9"
+  },
+  "devDependencies": {
+    "serverless-bundle": "^5.5.0",
+    "typescript": "^4.8.4",
+    "serverless-dynamodb-local": "^0.2.40",
     "prettier": "^2.7.1",
     "serverless": "^3.23.0",
-    "serverless-bundle": "^5.5.0",
-    "serverless-dotenv-plugin": "^4.0.2",
-    "serverless-offline": "^11.1.3",
-    "typescript": "^4.8.4"
+    "serverless-offline": "^11.1.3"
   }
 }
