--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["./dist/**/*", "./node_modules/**/*"]
+  "exclude": ["./dist/**/*", "./node_modules/**/*", "./layer/**/*"]
 }
